meu primeiro commit

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/thexbie/gms-estudo#readme",
   "dependencies": {
     "cypress": "^15.3.0"
+  },
+  "devDependencies": {
+    "faker": "^6.6.6"
   }
 }
